--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -8,7 +8,7 @@
     tools:context=".booking">
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btnCrdPay"
         android:layout_width="66dp"
         android:layout_height="43dp"
         android:layout_marginStart="8dp"
