--- a/app/src/main/res/layout/activity_passenger.xml
+++ b/app/src/main/res/layout/activity_passenger.xml
@@ -82,7 +82,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView25"
+            android:id="@+id/txtPContact"
             android:layout_width="148dp"
             android:layout_height="31dp"
             android:layout_marginStart="8dp"
