--- a/app/src/main/res/layout/activity_payments.xml
+++ b/app/src/main/res/layout/activity_payments.xml
@@ -9,7 +9,7 @@
     tools:context=".Payments">
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btnCrdPay"
         android:layout_width="66dp"
         android:layout_height="43dp"
         android:layout_marginStart="8dp"
