--- a/app/src/main/res/layout/activity_book_bus.xml
+++ b/app/src/main/res/layout/activity_book_bus.xml
@@ -42,7 +42,7 @@
         app:layout_constraintVertical_bias="0.603" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textViewSignup"
         android:layout_width="111dp"
         android:layout_height="45dp"
         android:layout_marginStart="8dp"
@@ -85,7 +85,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/inputFrom"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textViewSignup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.89"
         app:layout_constraintStart_toStartOf="parent" />
