--- a/app/src/main/res/layout/activity_pay_now.xml
+++ b/app/src/main/res/layout/activity_pay_now.xml
@@ -63,7 +63,7 @@
         app:layout_constraintVertical_bias="0.313" />
 
     <RadioButton
-        android:id="@+id/radioButton"
+        android:id="@+id/radioButton1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
