--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -50,7 +50,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/textViewSignup"
             android:layout_width="81dp"
             android:layout_height="23dp"
             android:layout_marginStart="28dp"
@@ -68,7 +68,7 @@
             android:layout_marginBottom="48dp"
             android:text="Start time"
             android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/textView3"
+            app:layout_constraintBottom_toTopOf="@+id/textViewSignup"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
@@ -107,10 +107,10 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:textSize="18sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textViewSignup"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/textView3" />
+            app:layout_constraintStart_toEndOf="@+id/textViewSignup" />
 
         <EditText
             android:id="@+id/admin_rnumber_ud"
