--- a/app/src/main/res/layout/user_login.xml
+++ b/app/src/main/res/layout/user_login.xml
@@ -8,14 +8,14 @@
     tools:context=".user_login">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textViewSignup"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:onClick="gotoRegister"
+        android:onClick="onClick"
         android:text="@string/LogLink"
         android:textAlignment="center"
         android:textColor="@color/LinkColor"
@@ -32,7 +32,7 @@
         android:layout_width="110dp"
         android:layout_height="26dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="236dp"
         android:text="@string/LogPassword"
         android:textAlignment="viewStart"
         android:textColor="@color/colorPrimaryDark"
@@ -80,7 +80,7 @@
 
     <EditText
 
-        android:id="@+id/UN"
+        android:id="@+id/UE"
         android:layout_width="330dp"
         android:layout_height="43dp"
         android:layout_marginStart="8dp"
@@ -89,7 +89,7 @@
         android:layout_marginBottom="8dp"
         android:background="@color/TextBoxColor"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
@@ -135,11 +135,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.874"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/textViewForgot"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textViewForgot"
         android:layout_width="157dp"
         android:layout_height="30dp"
         android:layout_marginStart="8dp"
