--- a/app/src/main/res/layout/activity_admin_add_route.xml
+++ b/app/src/main/res/layout/activity_admin_add_route.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".admin_add_route">
+    tools:context=".AdminRoute.admin_add_route">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,7 +39,8 @@
                 android:textSize="24sp" />
 
             <EditText
-                android:id="@+id/seatNo"
+
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -64,12 +65,14 @@
                 android:textSize="24sp" />
 
             <EditText
+
                 android:id="@+id/txtTo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textAllCaps="false" />
         </LinearLayout>
 
         <LinearLayout
@@ -89,6 +92,7 @@
                 android:textSize="24sp" />
 
             <EditText
+
                 android:id="@+id/txtTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -115,6 +119,7 @@
                 android:textSize="24sp" />
 
             <EditText
+
                 android:id="@+id/txtFrom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -140,6 +145,7 @@
                 android:textSize="24sp" />
 
             <EditText
+
                 android:id="@+id/txtDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -149,7 +155,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/admin_addroute_btn"
+            android:id="@+id/admin_uproute_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
